@@ -1,7 +1,6 @@
 package ma.nttsquad.nttecomcore.service.impl;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import ma.nttsquad.nttecomcore.dto.OrderDto;
 import ma.nttsquad.nttecomcore.exception.NttNotFoundException;
 import ma.nttsquad.nttecomcore.mapper.OrderMapper;
@@ -22,19 +21,27 @@ public class OrderSrvImpl implements OrderSrv {
     OrderRepository orderRepository;
 
     @Override
-    public List<OrderDto> getOrders() {
-        return orderRepository.findAll()
+    public List<OrderDto> getAllOrders() {
+        List<OrderDto> allOrdersDTO = orderRepository.findAll()
                 .stream()
                 .map(OrderMapper.INSTANCE::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
+        if(allOrdersDTO == null || allOrdersDTO.isEmpty()){
+            throw new NttNotFoundException("There's no Orders in data base");
+        }
+        return allOrdersDTO;
     }
 
     @Override
     public List<OrderDto> getOrdersByUserId(Long userId) {
-        return orderRepository.findByUserId(userId)
+        List<OrderDto> allOrdersDTO = orderRepository.findByUserId(userId)
                 .stream()
                 .map(OrderMapper.INSTANCE::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
+        if(allOrdersDTO == null || allOrdersDTO.isEmpty()){
+            throw new NttNotFoundException("There's no Orders belonging the user with the id '%d'".formatted(userId));
+        }
+        return allOrdersDTO;
     }
 
     @Override
